// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Child node (trusted svg children) -- dark tone class (color set with style option) 1`] = `
<div
  className="pe-icon pe-icon--regular    "
  style={
    Object {
      "color": "#fff",
    }
  }
>
  <SVG>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
        }
      }
    />
  </SVG>
</div>
`;

exports[`Child node (trusted svg children) 1`] = `
<div
  className="pe-icon pe-icon--regular    "
>
  <SVG>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
        }
      }
    />
  </SVG>
</div>
`;

exports[`Dark tone class + light tone 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "8px",
    }
  }
>
  <Icon
    svg={
      Object {
        "content": <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
            }
          }
        />,
      }
    }
    tone="light"
  />
  <Icon
    className="tests-icon-themed-icon"
    svg={
      Object {
        "content": <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
            }
          }
        />,
      }
    }
    tone="light"
  />
</div>
`;

exports[`Dark tone class + light tone class 1`] = `
<div
  className="pe-light-tone"
  style={
    Object {
      "background": "#fff",
      "padding": "8px",
    }
  }
>
  <Icon
    svg={
      Object {
        "content": <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
            }
          }
        />,
      }
    }
  />
  <Icon
    className="tests-icon-themed-icon"
    svg={
      Object {
        "content": <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
            }
          }
        />,
      }
    }
  />
</div>
`;

exports[`No options 1`] = `
<div
  className="pe-icon pe-icon--regular    "
/>
`;

exports[`Option: SVG as component (JSX) 1`] = `
<Icon>
  <SVG>
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"
      />
    </svg>
  </SVG>
</Icon>
`;

exports[`Option: avatar (size large) 1`] = `
<div
  className="pe-icon pe-icon--large pe-icon--avatar   "
>
  <img
    src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png"
  />
</div>
`;

exports[`Option: class 1`] = `
<div
  className="pe-icon pe-icon--regular    class-x"
/>
`;

exports[`Option: className 1`] = `
<div
  className="pe-icon pe-icon--regular    className-x"
/>
`;

exports[`Option: content (trusted svg content) 1`] = `
<div
  className="pe-icon pe-icon--regular    "
>
  <SVG
    content={
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
          }
        }
      />
    }
  />
</div>
`;

exports[`Option: content 1`] = `
<div
  className="pe-icon pe-icon--regular    "
>
  <div
    dangerouslySetInnerHTML={
      Object {
        "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
      }
    }
  />
</div>
`;

exports[`Option: element 1`] = `
<a
  className="pe-icon pe-icon--regular    "
/>
`;

exports[`Option: id 1`] = `
<div
  className="pe-icon pe-icon--regular    "
  id="id-x"
/>
`;

exports[`Option: size 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
    }
  }
>
  <Icon
    size="small"
    svg={
      Object {
        "content": <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
            }
          }
        />,
      }
    }
  />
  <Icon
    size="regular"
    svg={
      Object {
        "content": <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
            }
          }
        />,
      }
    }
  />
  <Icon
    size="medium"
    svg={
      Object {
        "content": <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
            }
          }
        />,
      }
    }
  />
  <Icon
    size="large"
    svg={
      Object {
        "content": <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
            }
          }
        />,
      }
    }
  />
</div>
`;

exports[`Option: src (image file) 1`] = `
<div
  className="pe-icon pe-icon--regular    "
>
  <img
    src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png"
  />
</div>
`;

exports[`Option: src (svg file) 1`] = `
<div
  className="pe-icon pe-icon--regular    "
>
  <img
    src="http://arthurclemens.github.io/assets/polythene/examples/recycle.svg"
  />
</div>
`;

exports[`Option: style (JSX) 1`] = `
<Icon
  style={
    Object {
      "color": "#EF6C00",
    }
  }
>
  <SVG>
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"
      />
    </svg>
  </SVG>
</Icon>
`;

exports[`Option: style 1`] = `
<div
  className="pe-icon pe-icon--regular    "
  style={
    Object {
      "color": "#EF6C00",
    }
  }
>
  <SVG
    content={
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
          }
        }
      />
    }
  />
</div>
`;

exports[`Option: svg as attribute (JSX) 1`] = `
<Icon
  svg={
    Object {
      "content": <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"
        />
      </svg>,
    }
  }
/>
`;

exports[`Themed (color and size) -- dark tone class 1`] = `
<div
  className="pe-icon pe-icon--regular    tests-icon-themed-icon"
>
  <SVG
    content={
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
          }
        }
      />
    }
  />
</div>
`;

exports[`Themed (color and size) 1`] = `
<div
  className="pe-icon pe-icon--regular    tests-icon-themed-icon"
>
  <SVG
    content={
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
          }
        }
      />
    }
  />
</div>
`;
